--- a/config/.i3/i3status.conf
+++ b/config/.i3/i3status.conf
@@ -44,7 +44,7 @@ disk "/" {
 
 diskdata {
         format = "Disk: [\?color=free {free} GiB]"
-        disk = "/dev/nvme0n1p1"
+        disk = "/dev/sda3"
 }
 
 load {
@@ -96,7 +96,6 @@ lm_sensors fan {
 
 nvidia_smi {
         format_gpu = 'GPU Tº: [\?color=temperature.gpu {temperature.gpu} °C] '
-        format_gpu += 'Fan: [\?color=fan.speed {fan.speed}%] '
         format_gpu += 'VRAM: [\?color=memory.used_percent {memory.free} {memory.free_unit}]'
 }
 
